<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/league_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/content_desription_league_name"
            android:gravity="center"
            tools:text="@string/test_text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/League" />

        <TextView
            android:id="@+id/matchday_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:contentDescription="@string/content_desription_match_day"
            tools:text="@string/test_text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/League" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/share_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"
            android:drawableLeft="@drawable/ic_share_white_24dp"
            android:drawableStart="@drawable/ic_share_white_24dp"
            android:gravity="center"
            android:paddingLeft="60dp"
            android:paddingStart="60dp"
            android:contentDescription="@string/content_desription_share_button"
            android:paddingRight="60dp"
            android:paddingEnd="60dp"
            android:text="@string/share_text" />
    </FrameLayout>

</LinearLayout>